crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_form_opens_empty_with_every_hint_inside_its_field_at_80_columns.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"     ╭ Add server ────────────────────────────────────────────────────────╮     "
"     │ ┃ Link                                                             │     "
"     │ ┃ http(s)://host[:port]                                            │     "
"     │ ┃ > https://music.example.com                                      │     "
"     │                                                                    │     "
"     │                                                                    │     "
"     │   User                                                             │     "
"     │   > admin                                                          │     "
"     │                                                                    │     "
"     │                                                                    │     "
"     │   Password                                                         │     "
"     │   Kept in the macOS Keychain                                       │     "
"     │   > ••••••••                                                       │     "
"     │                                                                    │     "
"     │                                                                    │     "
"     │ tab next · shift+tab back · enter connect · esc cancel             │     "
"     ╰────────────────────────────────────────────────────────────────────╯     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
