crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_form_shows_a_field_error_under_its_field_and_the_refusal_under_the_form.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: "frame_at(100, &refused())"
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"               ╭ Add server ────────────────────────────────────────────────────────╮               "
"               │ ┃ Link                                                             │               "
"               │ ┃ http(s)://host[:port]                                            │               "
"               │ ┃ > https://music.example.com                                      │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │   User                                                             │               "
"               │   > admin                                                          │               "
"               │   * Type the user name                                             │               "
"               │                                                                    │               "
"               │   Password                                                         │               "
"               │   Kept in the macOS Keychain                                       │               "
"               │   > ••••••••                                                       │               "
"               │                                                                    │               "
"               │ music.example.com is out of reach: an unknown error                │               "
"               │ tab next · shift+tab back · enter connect · esc cancel             │               "
"               ╰────────────────────────────────────────────────────────────────────╯               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
