crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_form_shows_every_filled_field_and_a_dot_per_password_character.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: screen
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"               ╭ Add server ────────────────────────────────────────────────────────╮               "
"               │   Link                                                             │               "
"               │   http(s)://host[:port]                                            │               "
"               │   > https://music.example.com                                      │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │   User                                                             │               "
"               │   > alice                                                          │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │ ┃ Password                                                         │               "
"               │ ┃ Kept in the macOS Keychain                                       │               "
"               │ ┃ > •••••••                                                        │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               │ tab next · shift+tab back · enter connect · esc cancel             │               "
"               ╰────────────────────────────────────────────────────────────────────╯               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
