crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_link_step_opens_with_its_whole_hint_at_80_columns.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"            ╭ Add server ───────────────────────────────────────────╮           "
"            │ > _                                                   │           "
"            │ http(s)://host[:port], like https://music.example.com │           "
"            │ Type the link of the server                           │           "
"            │ Enter next · Esc cancel                               │           "
"            ╰───────────────────────────────────────────────────────╯           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
