crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_link_step_shows_the_error_under_the_field.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: "frame(&ServerPrompt::Link(entry(\"music.example.com\",\nSome(EndpointError::Scheme))))"
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                      ╭ Add server ───────────────────────────────────────────╮                     "
"                      │ > music.example.com_                                  │                     "
"                      │ http(s)://host[:port], like https://music.example.com │                     "
"                      │ Start the link with https:// or http://               │                     "
"                      │ Enter next · Esc cancel                               │                     "
"                      ╰───────────────────────────────────────────────────────╯                     "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
