crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_link_step_shows_the_live_verdict_under_the_hint.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: "frame(&ServerPrompt::Link\n{\n    origin_server_name: None, text_entry:\n    entry(\"https://\", Some(EndpointError::Host)),\n})"
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"            ╭ Add server ──────────────────────────────────────────────────────────────╮            "
"            │ > https://_                                                              │            "
"            │ http(s)://host[:port], like https://music.example.com                    │            "
"            │ Add the server host after the scheme, with a port from 1 to 65535 if any │            "
"            │ Enter next · Esc cancel                                                  │            "
"            ╰──────────────────────────────────────────────────────────────────────────╯            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
