crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_link_step_shows_the_typed_link.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: "frame(&ServerPrompt::Link(entry(\"https://music.example.com\", None)))"
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                      ╭ Add server ───────────────────────────────────────────╮                     "
"                      │ > https://music.example.com_                          │                     "
"                      │ http(s)://host[:port], like https://music.example.com │                     "
"                      │ Enter next · Esc cancel                               │                     "
"                      ╰───────────────────────────────────────────────────────╯                     "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
