crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_password_step_paints_a_dot_per_character.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: screen
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                            ╭ Add server ──────────────────────────────╮                            "
"                            │ Link  https://music.example.com          │                            "
"                            │ User  alice                              │                            "
"                            │ > •••••••_                               │                            "
"                            │ Enter next · Esc cancel                  │                            "
"                            ╰──────────────────────────────────────────╯                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
