crates/widgets/src/overlay/snapshots/widgets__overlay__add_server__tests__add_server_user_step_shows_the_link_above_the_field.snap
---
source: crates/widgets/src/overlay/add_server.rs
expression: "frame(&ServerPrompt::User\n{ endpoint: endpoint(), text_entry: entry(\"alice\", None), })"
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                            ╭ Add server ──────────────────────────────╮                            "
"                            │ Link  https://music.example.com          │                            "
"                            │ > alice_                                 │                            "
"                            │ Enter next · Esc cancel                  │                            "
"                            ╰──────────────────────────────────────────╯                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
